tests/api/reference/negative/13-read-bytes-range.asm
const invalid: bytes = fs.read_bytes("../13-files-data/nested/payload.bin", 4, 3)
